# jcfb

./: .gitignore  CMakeLists.txt  Makefile  README
benchmarks/: CMakeLists.txt  bitmap-blit.c  jcfb-refresh.c  pixel-conversion.c
doc/: rendering.txt
include/jcfb/: bitmap-io.h  bitmap-loading.h  bitmap.h  jcfb.h  keyboard.h  mouse.h  pixel.h  primitive.h  ttf.h  util.h
include/stb/: stb_truetype.h
lab/: keyboard-test.c
sample/: CMakeLists.txt  convert.c  firework.c  keyboard.c  mandelbrot.c  mouse.c  move.c  primitive.c  print.c  sample.c  tetris.c  ttf.c
src/: CMakeLists.txt  bitmap-blit.inc.c  bitmap-io.c  bitmap-loading.c  bitmap.c  jcfb.c  keyboard.c  mouse.c  pixel.c  primitive.c  primitive.inc.c  ttf.c
