add_executable(print.exe        ${CMAKE_CURRENT_SOURCE_DIR}/print.c)
add_executable(mandelbrot.exe   ${CMAKE_CURRENT_SOURCE_DIR}/mandelbrot.c)
add_executable(tetris.exe       ${CMAKE_CURRENT_SOURCE_DIR}/tetris.c)
add_executable(ttf.exe          ${CMAKE_CURRENT_SOURCE_DIR}/ttf.c)
add_executable(keyboard.exe     ${CMAKE_CURRENT_SOURCE_DIR}/keyboard.c)
add_executable(mouse.exe        ${CMAKE_CURRENT_SOURCE_DIR}/mouse.c)
add_executable(move.exe         ${CMAKE_CURRENT_SOURCE_DIR}/move.c)
add_executable(convert.exe      ${CMAKE_CURRENT_SOURCE_DIR}/convert.c)
add_executable(primitive.exe    ${CMAKE_CURRENT_SOURCE_DIR}/primitive.c)
add_executable(firework.exe     ${CMAKE_CURRENT_SOURCE_DIR}/firework.c)

target_link_libraries(print.exe      jcfb m)
target_link_libraries(mandelbrot.exe jcfb m)
target_link_libraries(tetris.exe     jcfb m)
target_link_libraries(ttf.exe        jcfb m)
target_link_libraries(keyboard.exe   jcfb m)
target_link_libraries(mouse.exe      jcfb m)
target_link_libraries(move.exe       jcfb m)
target_link_libraries(convert.exe    jcfb m)
target_link_libraries(primitive.exe  jcfb m)
target_link_libraries(firework.exe   jcfb m)
